# ntrack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  zapstore.yaml
.claude/skills/rust-slint-android-app/: SKILL.md
.github/workflows/: ci.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/ntrack/app/: BootReceiver.java  FileBridgeProvider.java  LocationBridge.java  LocationService.java  MainActivity.java  ScanActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
app/: Cargo.toml  build.rs
app/src/: controller.rs  glue.rs  headless.rs  lib.rs  main.rs  map.rs  platform.rs  sim.rs
app/ui/: app.slint
core/: Cargo.toml
core/examples/: genkey.rs  mock_relay.rs
core/src/: config.rs  dedup.rs  engine.rs  error.rs  gpx.rs  invite.rs  keys.rs  lib.rs  protocol.rs  qr.rs  relay.rs
core/tests/: relay_integration.rs
docker/: Dockerfile
docker/certs/: README.md
docs/: PROTOCOL.md  RELEASING.md
docs/branding/: README.md
docs/superpowers/specs/: 2026-06-15-relay-hints-in-invites-design.md
scripts/: build-apk.sh  gen-release-keystore.sh
