[workspace]
resolver = "2"
members = ["core", "app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/f321x/ntrack"

[workspace.dependencies]
nostr = { version = "0.44", default-features = false, features = ["std", "nip44"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "net", "macros"] }

# Native libraries shipped in the APK are built with the release profile.
# Fat LTO + a single codegen unit + full symbol stripping keep libntrack_app.so
# small and well-optimized (at the cost of slower builds).
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.ntrack-core]
# keep overflow checks in the protocol layer even in release builds
overflow-checks = true
