[package]
name = "ntrack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NIP-GART (kind:694) live location sharing protocol core: events, crypto, relays, engines"

[dependencies]
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
percent-encoding = "2.3.2"
rqrr = "0.10.1"

[dev-dependencies]
qrcode = "0.14.1"
tokio = { version = "1", features = ["full", "test-util"] }
